# vuir-zoom

./: .gitignore  Custom-Info.plist  README.md  VuIRZoom.pro  common.pri  installer.pri  q  setup.pri
boson_sdk_cpp/: Readme.txt  autorunmake_createSDKLib.sh
boson_sdk_cpp/ClientFiles_C/: CMakeLists.txt  Client_Dispatcher.cpp  Client_Packager.cpp  Example.cpp  ReadMe.txt  Serializer_BuiltIn.cpp  Serializer_BuiltIn.h  UART_Connector.cpp  UART_Connector.h  dataServiceClient.cpp  do_build.bat  fifo.cpp  libusb_binary_protocol.c  libusb_binary_protocol.h
boson_sdk_cpp/FSLP_Files/: FSLP_64.def  UART_HalfDuplex.py
inc/: ag_aux_funcs.h  asmOpenCV.h  bosonvariation.h  bosonvariation_types.h  bytes.h  convenientserial.h  ffmpgegvideorecorder.h  globalflirvariables.h  globalforclassvariables.h  globalvariables.h  ocvvideocapture.h  pin_map.h  serial.h  uvcacquisition.h  uvcvideoproducer.h  videoviewscontroller.h
libqtavi/: QAviWriter.cpp  QAviWriter.h
qml/: Viewer.qml  ViewerForm.ui.qml  main.qml  qml.qrc  videoview.qml  videoview_ocv.qml
qml/boson/: BosonTabs.qml  (+2 more)
src/: QVideoFrameToQImage.cpp  ag_aux_funcs.cpp  agthread.cpp  agthread.h  agtimer.cpp  agtimer.h  bosonvariation.cpp  callcppfunctionsfromqml.cpp  callcppfunctionsfromqml.h  convenientserial.cpp  ffmpgegvideorecorder.cpp  leptonvariation.cpp  main.cpp  ocvvideocapture.cpp  ocvvideocapture.h  ocvvideoproducer.cpp  ocvvideoproducer.h  savevidframesthread.cpp  savevidframesthread.h  serial.cpp  uvcacquisition.cpp  uvcvideoproducer.cpp  videoframetoqimage.cpp  videoframetoqimage.h  videoviewscontroller.cpp
(+18 files in other folders)
